// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author tests DELETE method It should not delete the author with the wrong id passed as parameter 1`] = `
Object {
  "message": "Este autor não existe.",
}
`;

exports[`Author tests DELETE method It should not delete the author with the wrong id passed as parameter 2`] = `
Object {
  "message": "Este autor não existe.",
}
`;

exports[`Author tests GET method It should not return the authors with the wrong the id passed as parameter 1`] = `
Object {
  "message": "Este autor não existe.",
}
`;

exports[`Author tests POST method It should create a new author. 1`] = `
Object {
  "message": "Autor criado com sucesso!",
}
`;

exports[`Author tests PUT method It should update the author according the id passed as parameter 1`] = `
Object {
  "message": "Autor atualizado com sucesso!",
}
`;
